# FastAPI-MongoDB-Candidate-Management

./: .env.example  .pre-commit-config.yaml  Dockerfile  ReadME.md  docker-compose.yml  pyproject.toml  wait-for-it.sh
src/: main.py
src/api/: dependencies.py  middleware.py
src/api/routes/: auth.py  candidates.py  health.py
src/config/: logging_config.py  settings.py
src/core/: exceptions.py  security.py
src/domain/models/: candidate.py  user.py
src/domain/repositories/: base.py  candidate_repository.py  user_repository.py
src/infrastructure/: celery_app.py  database.py  migrations.py
src/services/: auth_service.py  candidate_service.py  tasks.py
tests/: conftest.py
tests/api/: test_auth.py  test_candidates.py  test_health.py
